# sachi

./: .gitignore  README.md  config.csv  pcconfig.py  pyproject.toml  sachi_wled.py
.web/: bun.lockb  package.json
.web/pages/: index.js
sachi/: color_picker.py  sachi.py  wled_control.py
